# repo-memory

./: .gitignore  Dockerfile  Dockerfile.glama  LICENSE  README.md  glama.json  llms.txt  pyproject.toml  server.json
.ai-memory/: README.md  facts.jsonl  gotchas.md
.ai-memory/decisions/: 2026-05-18-append-only-facts-no-edit-or-delete-api.md  2026-05-18-bundle-mcp-sdk-as-required-dependency-not-optional.md  2026-05-18-use-git-as-the-sync-layer-instead-of-a-database.md
.github/workflows/: mcp-registry.yml  publish.yml
src/repo_memory/: __init__.py  cli.py  mcp_server.py  store.py
