[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-memory"
version = "0.2.0"
description = "Shared, git-tracked memory for AI agents (Claude Code, Cursor, Cline) working on the same codebase. CLI + MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "yubinkim444" }]
keywords = [
    "ai-agents", "claude-code", "cursor", "cline", "mcp",
    "memory", "knowledge-base", "codebase", "llm", "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/yubinkim444/repo-memory"
Repository = "https://github.com/yubinkim444/repo-memory"
Issues = "https://github.com/yubinkim444/repo-memory/issues"

[project.scripts]
repo-memory = "repo_memory.cli:main"
repo-memory-mcp = "repo_memory.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_memory"]
